minor changes to CoronaCard

--- a/src/components/CoronaCard/CoronaCard.css
+++ b/src/components/CoronaCard/CoronaCard.css
@@ -2,7 +2,7 @@
   margin-top: 30px;
   color: white;
   width: 320px;
-  height: 140px;
+  padding-bottom: 14px;
   border-radius: 6px;
   background: rgb(51, 51, 51);
 }
